<resources>
    <string name="app_name" translatable="false">Material design</string>

    <string name="photo_of_the_day_stub" translatable="false">Photo of the day</string>
    <string name="search_wiki" translatable="false">Найти в Википедии</string>
    <string name="wiki_helper_text" translatable="false">Поищите термин в википедии</string>
    <string name="favourite" translatable="false">favourite</string>
    <string name="settings" translatable="false">settings</string>
    <string name="search" translatable="false">Search</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="tdby">tdby</string>
    <string name="stok">stok</string>
    <string name="red">red</string>
    <string name="green">green</string>
    <string name="blue">blue</string>
    <string name="earth">Earth</string>
    <string name="system">System</string>
    <string name="mars">Mars</string>
    <string name="Settings">settings</string>
    <string name="PicturesOfTheDay">Pod</string>
    <string name="recycle_view">recycleView</string>
    <string name="textDescr">Марс -- четвёртая по удалённости от Солнца и седьмая по размерам планета Солнечной системы. Названа в честь Марса -- древнеримского бога войны, соответствующего древнегреческому Аресу. Иногда Марс называют «красной планетой» из-за красноватого оттенка поверхности, придаваемого ей минералом маггемитом (оксидом железа).</string>
    </resources>