<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tabLayout"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip

            android:tag="0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stok" />

        <com.google.android.material.chip.Chip

            android:tag="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/red" />

        <com.google.android.material.chip.Chip

            android:tag="2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/green" />
        <com.google.android.material.chip.Chip

            android:tag="3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/blue" />
    </com.google.android.material.chip.ChipGroup>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.tabs.TabItem
            android:tag="1"
            android:layout_width="wrap_content"
            android:layout_height="?actionBarSize"
            android:text="@string/stok" />

        <com.google.android.material.tabs.TabItem
            android:tag="2"
            android:layout_width="wrap_content"
            android:layout_height="?actionBarSize"
            android:text="@string/red" />

        <com.google.android.material.tabs.TabItem
            android:tag="3"
            android:layout_width="wrap_content"
            android:layout_height="?actionBarSize"
            android:text="@string/green" />

        <com.google.android.material.tabs.TabItem
            android:tag="4"
            android:layout_width="wrap_content"
            android:layout_height="?actionBarSize"
            android:text="@string/blue" />
    </com.google.android.material.tabs.TabLayout>


</androidx.constraintlayout.widget.ConstraintLayout>