<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            android:layout_height="match_parent"
            android:background="@color/white"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:toolbarId="@+id/toolbar">
            <androidx.constraintlayout.motion.widget.MotionLayout
                android:id="@+id/motionEnd"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layoutDescription="@xml/layout_description">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/inputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/search_wiki"
                    app:counterEnabled="true"
                    app:counterMaxLength="20"
                    app:endIconContentDescription="content_description_end_icon"
                    app:endIconDrawable="@drawable/ic_wikipedia"
                    app:endIconMode="custom"
                    app:helperText="@string/wiki_helper_text"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintTop_toBottomOf="parent"
                    android:visibility="visible">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/input_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="62dp"
                        android:inputType="text" />
                </com.google.android.material.textfield.TextInputLayout>
                <ru.chistov.materialdesign.utils.EquilateralImageView
                    android:id="@+id/imageW"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:contentDescription="@string/photo_of_the_day_stub"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:srcCompat="@drawable/ic_wikipedia"
                    android:visibility="gone"/>

                <com.google.android.material.tabs.TabLayout
                    android:id="@+id/tabLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/inputLayout">

                    <com.google.android.material.tabs.TabItem

                        android:layout_width="wrap_content"
                        android:layout_height="?actionBarSize"
                        android:text="@string/today" />

                    <com.google.android.material.tabs.TabItem

                        android:layout_width="wrap_content"
                        android:layout_height="?actionBarSize"
                        android:text="@string/yesterday" />

                    <com.google.android.material.tabs.TabItem

                        android:layout_width="wrap_content"
                        android:layout_height="?actionBarSize"
                        android:text="@string/tdby" />

                </com.google.android.material.tabs.TabLayout>

                <FrameLayout
                    android:id="@+id/frameLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tabLayout"
                    app:srcCompat="@drawable/ic_no_photo_vector">
                    <ru.chistov.materialdesign.utils.EquilateralImageView
                        android:id="@+id/imageView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:contentDescription="@string/photo_of_the_day_stub" />
                </FrameLayout>

                <TextView
                    android:id="@+id/videoOfTheDay"
                    android:textColor="@color/black"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="180dp"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tabLayout"/>
            </androidx.constraintlayout.motion.widget.MotionLayout>




        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"

        android:layout_height="match_parent"
        app:layout_behavior=".view.NestedBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                app:cardElevation="8dp"
                app:contentPadding="16dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <View
                        android:id="@+id/bottom_sheet_line"
                        android:layout_width="25dp"
                        android:layout_height="1dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="5dp"
                        android:background="#663b4351"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="5dp"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:textColor="#000"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/bottom_sheet_line"
                        tools:text="Two Clusters and a Comet" />

                    <TextView
                        android:id="@+id/explanation"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/title"
                        tools:text="This lovely starfield spans some four full moons." />
                </LinearLayout>


            </androidx.cardview.widget.CardView>


        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>